# pycounts416

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts416/: __init__.py  datasets.py  plotting.py
tests/: test_pycounts416.py
